--- a/templates/example.html
+++ b/templates/example.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Крамар Дарья, Проворова Елена. Лабораторная работа {{nomerl}}</title>
+    <title>{% if name %}Крамар Дарья, Проворова Елена.{% endif %} Лабораторная работа 2</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}">
 </head>
 <body>
     <header>
-        WEB-програмиирование, часть 2. Лабораторная работа {{nomerl}}
+        WEB-програмиирование, часть 2. {% if nomerl %}Лабораторная работа 2{% endif %}
     </header>
 
     <main>
@@ -18,7 +19,23 @@
     </main>
 
     <footer>
-        &copy; {{name}}, ФБИ-{{gruppa}}, {{nomerk}} курс, 2023
+        &copy; 
+        {% if name %}
+            {{name}},
+        {% else %}
+            Анонимус
+        {% endif %} 
+        ФБИ-{% if gruppa %}
+            {{gruppa}},
+        {% else %}
+            12,
+        {% endif %} 
+        {% if nomerk %}
+            {{nomerk}},
+        {% else %}
+            4,
+        {% endif %} 
+        2023
     </footer>
 </body>
 </html>
