--- a/templates/example.html
+++ b/templates/example.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% if name %}Крамар Дарья, Проворова Елена.{% endif %} Лабораторная работа 2</title>
+    <title>{% if name %}Крамар Дарья, Проворова Елена.{% endif %} Лабораторная {{nomerl}}</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}">
 </head>
 <body>
@@ -16,6 +16,11 @@
         11 x 28 = {{ 11 * 28 }}<br>
         8452/793 = {{ 8452 / 793 }}<br>
         45^8 = {{ 45 ** 8 }}
+        <ul>
+            {% for f in fruits %}
+            <li>{{ f.name }}: {{ f.price }} &#8381;</li>
+            {% endfor %}
+        </ul>
     </main>
 
     <footer>
