--- a/templates/lab2.html
+++ b/templates/lab2.html
@@ -9,5 +9,8 @@
         <li>
             <a href="/lab2/example">example</a>
         </li>
+        <li>
+            <a href="/lab2/series">Самостоятельное задание</a>
+        </li>
     </ol>
 {% endblock %}
