--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,9 @@
     
     <main>
         {% block main %}{% endblock %}
-        <a href="/menu">example</a>
+        <div class="ex">
+            <a href="/menu">example</a>
+        </div>
     </main>
 
     <footer>
