--- a/templates/base.html
+++ b/templates/base.html
@@ -10,11 +10,10 @@
     <header>
         WEB-програмиирование, часть 2. {{ self.lab() }}
     </header>
-    
     <main>
         {% block main %}{% endblock %}
         <div class="ex">
-            <a href="/menu">example</a>
+            <a href="/menu">Меню</a>
         </div>
     </main>
 
