--- a/templates/lab4.html
+++ b/templates/lab4.html
@@ -8,4 +8,7 @@
     <ol>
         <li><a href="/lab4/login">Авторизация</a></li>
     </ol>
+    <ol>
+        <li><a href="/lab4/holod">Холодильник</a></li>
+    </ol>
 {% endblock %}
