--- a/templates/lab4.html
+++ b/templates/lab4.html
@@ -11,4 +11,7 @@
     <ol>
         <li><a href="/lab4/holod">Холодильник</a></li>
     </ol>
+    <ol>
+        <li><a href="/lab4/zerno">Заказ зерна</a></li>
+    </ol>
 {% endblock %}
