--- a/templates/lab4.html
+++ b/templates/lab4.html
@@ -14,4 +14,7 @@
     <ol>
         <li><a href="/lab4/zerno">Заказ зерна</a></li>
     </ol>
+    <ol>
+        <li><a href="/lab4/cookies">Куки</a></li>
+    </ol>
 {% endblock %}
