--- a/templates/lab3.html
+++ b/templates/lab3.html
@@ -15,5 +15,8 @@
         <li>
             <a href="/lab3/form2">Покупка билета</a>
         </li>
+        <li>
+            <a href="/lab3/calk">Задание</a>
+        </li>
     </ol>
 {% endblock %}
